--- a/index.html
+++ b/index.html
@@ -1,29 +1,33 @@
-<!doctype html>
-<html lang="pt-BR">
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE-edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Uma Página HTML5 Básica</title>
-
-    <div class='container'>
-        <div class='card'>
-            <h1>Entrar</h1>
-        <div class="label-float">
-            <input type="text" id="usuario" placeholder="">
-            <label for="usurario">Usuario</label>
+    <title>Login</title>
+</head>
+<body>
+    <div class="main-login">
+        <div class="left-login">
+            <h1>Projeto E-estoque</h1>
+            <img src="astronautalive.svg" class="left-login-image" alt="Astronauta live">
         </div>
-
-        <div class="label-float">
-            <input type="password" id="senha" placeholder="">
-            <label for="usuario">Senha</label>
+        <div class="right-login">
+            <div class="card-login">
+                <h1>LOGIN</h1>
+                <div class="textfield">
+                    <label for="usuario">Usuário</label>
+                    <input type="text" name="usuario" placeholder="Usuário">
+                </div>
+                <div class="textfield">
+                    <label for="senha">Senha</label>
+                    <input type="password" name="senha" placeholder="Senha">
+                </div>
+                
+                <button class="btn-login">Login</button>
+            </div>
         </div>
-        <button>Entrar</button>
     </div>
-    <div>
-        <hr>
-    </div>
-    <p> Esqueci minha <a href=""> senha... </a></p>
-    
+</body>
 </html>
